--- a/scritturaTesi/capitolo_1.tex
+++ b/scritturaTesi/capitolo_1.tex
@@ -1,5 +1,5 @@
-\section{Stati Coerenti}
-Uno stato coerente fornisce una descrizione classica della luce in termini di onde elettromagnetiche, nonstante siano stati costruiti a partire dalla meccanica quantistica. Viene comunemente rappresentato $|\alpha_j \rangle = |q_j + ip_j \rangle $ attraverso la notazione introdotta da Paul Dirac che prende il nome di \textit{bra-ket}. Come si pu\`o notare uno stato coerente presenta due componenti \textit{q} e \textit{p} dette componenti di quadratura le quali non hanno una valore esatto ma sono variabili aleatorie che rispondono alla stessa distribuzione di probabilit\`a gaussiana che, in oppurtune unit\`a di misura, ha varianza unitaria. Il motivo per cui non rappresentano un valore esatto \`e perch\'e, a differenza fisica classica, nel fisica quantistica le quantit\'a, anche scalari, sono degli operatori che assumono una valore esatto solamente in fase di misura.
+\section{Stati coerenti e le loro propriet\`a}\label{se:sezione1-1}
+I segnali elettromagnetici possono essere descritti sia attraverso onde che attraverso particelle, ovvero fotoni. Ad esempio, il segnale prodotto da un LASER è ben rappresentato da uno stato quantistico detto stato coerente. Esso comunemente \`e rappresentato $|\alpha_j \rangle = |q_j + ip_j \rangle $ attraverso la notazione introdotta da Paul Dirac che prende il nome di \textit{bra-ket}. Dal punto di vista della fisica classica, il numero complesso $\alpha$ è strettamente legato all'ampiezza di oscillazione del campo elettrico corrispondente al segnale. Esso è costituito da due componenti reali, q e p, dette componenti di quadratura. Dal punto di vista della fisica quantistica, tuttavia, non è possibile assegnare un valore preciso a queste grandezze. Infatti, i valori di q e p che utilizziamo per rappresentare lo stato coerente sono solo valori medi. Quando proviamo a fare una misurazione delle grandezze fisiche associate, che indichiamo con $\hat q$ e $\hat p$, esse si comportano come variabili aleatorie che rispondono alla stessa distribuzione di probabilit\`a gaussiana che, in oppurtune unit\`a di misura, ha varianza unitaria. Il motivo per cui non rappresentano un valore esatto \`e perch\'e, a differenza fisica classica, nel fisica quantistica le quantit\'a, anche scalari, sono degli operatori che assumono una valore esatto solamente in fase di misura.
 
 Ogni stato coerente presenta un numero medio di fotoni che pu\`o essere calcolato nel seguente modo:
 \begin{equation}
@@ -11,17 +11,22 @@ Il numero medio di fotoni di uno stato coerente \`e associato all'energia del se
 Come detto precedentemente, nel nostro caso gli stati coerenti si presentano come una distribuzione di probabilit\`a gaussiana e possono essere rappresentati graficamento nel piano di Gauss come una nuvola di punti i quali avranno appunto probabilit\`a gaussiana di essere estratti.
 
 
-\begin{figure}[ht] 
-\includegraphics[scale=0.5]{figure/esempio-figura-1.eps}
-\caption{Figura da inserire---> Stato coerente} \label{fig:stato-coerente}
+\begin{figure}[h] 
+\begin{center}
+\includegraphics[scale=0.4]{figure/stato_coerente.eps}
+\end{center}
+\caption{Figura da inserire---> Stato coerente -->Da apportare modifica consigliata dal professore} \label{fig:stato-coerente}
 \end{figure}
 
-\section{Cosa succede in fase di misura}
-In fase di misura Bob riceve una stato coerente con la forma vista in figura \ref{fig:stato-coerente}, ci aspettiamo che nel momento della ricezione il valore della deviazione standard delle gaussiane che descrivono lo stato coerente sia aumentato rispetto a quello che avevano in fase di trasmissione. L'aumento di incertezza \`e dovuto al rumore che viene introdotto dal canale di trasmissione, ma di questo parleremo pi\`u nel dettaglio nel capitolo \ref{cap:capitolo_2}.
+\section{Misurazione dei segnali e incertezza quantistica}
+Partendo dal caso ideale, in cui il canale di comunicazione \`e perfetto e quindi non aggiunge rumore durante la trasmissione, Bob ricever\`a uno stato coerente con la forma vista in figura \ref{fig:stato-coerente}. Da notare che l'incertezza della misura \`e presente anche nel caso di un canale di comunicazione ideale, questo perch\'e non \`e dovuta solamente al rumore esterno, come ci si aspetterebbe in un canale di comunicazione classico, ma \`e una caratteristica intriseca di uno stato quantistico la quale non pu\`o essere rimossa \textbf{((o attenuata) da chiedere al professore)} in base al principio di indeterminazione di Heisenberg. Questa incertezza si presenta proprio in fase di misura, perch\'e come detto nella sezione~\ref{se:sezione1-1}, i valori di quadratura q e p sono solamente valori medi mentre i valori $\hat q$ o $\hat p$ che otteniamo da una misura omodina~\ref{subse:sottosezione2-1-1} sono variabili aleatorie con distribuzione di probabilit\`a gaussiana. 
 
-Una volta ricevuto il segnale quantistico Bob effettua la misura che consiste nell'estrarre, in base al tipo di misura adottato, uno o due valori che corrispondono ad una delle due componenti di quadratura o entrambe, con pobabilit\`a gaussiana. Dopo questa fase di misura termina la porzione quantistica del protocollo ottenendo dati classici su i quali verrano effettuate altro operazioni per ottenere, in caso di successo, una chiave crittografica sicura con la quale codificare messaggi che verranno scambiati su un canale di comunicazione classico.
+In un trasmissione reale, l'aggiunta di rumore esterno \`e inevitabile e in questo rumore \`e presente anche quello prodotto ad un eventuale spia (Eve) che tenta anch'essa di misurare il segnale modificandolo, questo rende la misura di Bob ancora pi\`u incerta. 
 
-\begin{figure}[ht] 
+Per concludere possiamo dire che le QKD utlizzano le caratteristice dei segnali quantistici per cui c'\`e un incertezza nella misura anche in assenza di rumore esterno e che una misura introduce rumore proprio per determinare l'eventuale intromissione di Eve nella comunicazione e quindi la possibilit\`a o meno di creare una chiave crittografica sicura.  
+
+
+\begin{figure}[bp] 
 \begin{center}
 \includegraphics[width=8cm]{figure/esempio-figura-1.eps}
 \end{center}
