modified chapter 1 and 2

--- a/scritturaTesi/bibliografia.bib
+++ b/scritturaTesi/bibliografia.bib
@@ -1,251 +1,89 @@
-@article{ jones96analysis,
-    author = "Trevor H. Jones and Il-Yeol Song",
-    title = "Analysis of Binary/Ternary Cardinality Combinations in Entity-Relationship Modeling",
-    journal = "Data  Knowledge Engineering",
-    volume = "19",
-    number = "1",
-    pages = "39-64",
-    year = "1996",
-    url = "citeseer.ist.psu.edu/jones96analysis.html" }
-
-@article{UUID:2005,
-	Author = {M. Mealling and R. Salz},
-	Title = {A Universally Unique IDentifier (UUID) URN Namespace},
-	Journal = {RFC 4122},
-	Year = {2005}
+@article{https://doi.org/10.1002/qute.201800011,
+author = {Laudenbach, Fabian and Pacher, Christoph and Fung, Chi-Hang Fred and Poppe, Andreas and Peev, Momtchil and Schrenk, Bernhard and Hentschel, Michael and Walther, Philip and Hübel, Hannes},
+title = {Continuous-Variable Quantum Key Distribution with Gaussian Modulation—The Theory of Practical Implementations},
+journal = {Advanced Quantum Technologies},
+volume = {1},
+number = {1},
+pages = {1800011},
+keywords = {continuous-variable quantum information, quantum communication, quantum cryptography, quantum optics},
+doi = {https://doi.org/10.1002/qute.201800011},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/qute.201800011},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/qute.201800011},
+abstract = {Abstract Quantum key distribution (QKD) using weak coherent states and homodyne detection is a promising candidate for practical quantum-cryptographic implementations due to its compatibility with existing telecom equipment and high detection efficiencies. However, despite the actual simplicity of the protocol, the security analysis of this method is rather involved compared to discrete-variable QKD. This article reviews the theoretical foundations of continuous-variable quantum key distribution (CV-QKD) with Gaussian modulation and rederives the essential relations from scratch in a pedagogical way. The aim of this paper is to be as comprehensive and self-contained as possible in order to be well intelligible even for readers with little pre-knowledge on the subject. Although the present article is a theoretical discussion of CV-QKD, its focus lies on practical implementations, taking into account various kinds of hardware imperfections and suggesting practical methods to perform the security analysis subsequent to the key exchange. Apart from a review of well-known results, this manuscript presents a set of new original noise models which are helpful to get an estimate of how well a given set of hardware will perform in practice.},
+year = {2018}
 }
 
-@misc{IEEE:1990,
-	Author = {Institute of Electrical and Electronics Engineers},
-	key = {IEE90},
-	Title = {IEEE Standard Computer Dictionary: A Compilation of IEEE Standard Computer Glossaries},
-	Year = {1990}
+@article{PhysRevX.9.041064,
+  title = {Asymptotic Security Analysis of Discrete-Modulated Continuous-Variable Quantum Key Distribution},
+  author = {Lin, Jie and Upadhyaya, Twesh and L\"utkenhaus, Norbert},
+  journal = {Phys. Rev. X},
+  volume = {9},
+  issue = {4},
+  pages = {041064},
+  numpages = {23},
+  year = {2019},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevX.9.041064},
+  url = {https://link.aps.org/doi/10.1103/PhysRevX.9.041064}
 }
 
-@misc{WIKI:INTEROP,
-	Author = {Wikipedia},
-	HowPublished = {\url{http://en.wikipedia.org/wiki/Interoperability}}
+@ARTICLE{1057683,
+  author={Gallager, R.},
+  journal={IRE Transactions on Information Theory}, 
+  title={Low-density parity-check codes}, 
+  year={1962},
+  volume={8},
+  number={1},
+  pages={21-28},
+  doi={10.1109/TIT.1962.1057683}}
+
+  @article{gumucs2021novel,
+  title={A novel error correction protocol for continuous variable quantum key distribution},
+  author={G{\"u}m{\"u}{\c{s}}, Kadir and Eriksson, Tobias A and Takeoka, Masahiro and Fujiwara, Mikio and Sasaki, Masahide and Schmalen, Laurent and Alvarado, Alex},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={10465},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
 }
 
-@book{BOX:1997,
-	author = {D. Box},
-	title = {Essential COM},
-	isbn = {0-201-63446-5},
-	publisher = {Addison Wesley Professional},
-	Year = {1997}
+@Article{e24101463,
+AUTHOR = {Fan, Xiaodong and Niu, Quanhao and Zhao, Tao and Guo, Banghong},
+TITLE = {Rate-Compatible LDPC Codes for Continuous-Variable Quantum Key Distribution in Wide Range of SNRs Regime},
+JOURNAL = {Entropy},
+VOLUME = {24},
+YEAR = {2022},
+NUMBER = {10},
+ARTICLE-NUMBER = {1463},
+URL = {https://www.mdpi.com/1099-4300/24/10/1463},
+PubMedID = {37420483},
+ISSN = {1099-4300},
+ABSTRACT = {Long block length rate-compatible low-density parity-compatible (LDPC) codes are designed to solve the problems of great variation of quantum channel noise and extremely low signal-to-noise ratio in continuous-variable quantum key distribution (CV-QKD). The existing rate-compatible methods for CV-QKD inevitably cost abundant hardware resources and waste secret key resources. In this paper, we propose a design rule of rate-compatible LDPC codes that can cover all potential SNRs with single check matrix. Based on this long block length LDPC code, we achieve high efficiency continuous-variable quantum key distribution information reconciliation with a reconciliation efficiency of 91.80% and we have higher hardware processing efficiency and lower frame error rate than other schemes. Our proposed LDPC code can obtain a high practical secret key rate and a long transmission distance in an extremely unstable channel.},
+DOI = {10.3390/e24101463}
 }
 
-@book{OLE:1998,
-	author = {Microsoft Corporation},
-	title = {Microsoft Ole Db 2.0 Programmer's Reference and Data Access Sdk},
-	publisher = {Microsoft Press},
-	Year = {1998}
+
+@article{milicevic_key_2018,
+	title = {Key {Reconciliation} with {Low}-{Density} {Parity}-{Check} {Codes} for {Long}-{Distance} {Quantum} {Cryptography}},
+	volume = {4},
+	issn = {2056-6387},
+	url = {http://arxiv.org/abs/1702.07740},
+	doi = {10.1038/s41534-018-0070-6},
+	abstract = {The speed at which two remote parties can exchange secret keys over a ﬁxed-length ﬁber-optic cable in continuousvariable quantum key distribution (CV-QKD) is currently limited by the computational complexity of post-processing algorithms for key reconciliation. Multi-edge low-density paritycheck (LDPC) codes with low code rates and long block lengths were proposed for CV-QKD, in order to extend the maximum reconciliation distance between the two remote parties. Key reconciliation over multiple dimensions has been shown to further improve the error-correction performance of multi-edge LDPC codes in CV-QKD, thereby increasing both the secret key rate and distance. However, the computational complexity of LDPC decoding for long block lengths on the order of 106 bits remains a challenge. This work introduces a quasi-cyclic (QC) code construction for multi-edge LDPC codes that is highly suitable for hardware-accelerated decoding on a modern graphics processing unit (GPU). When combined with an 8-dimensional reconciliation scheme, the LDPC decoder achieves a raw decoding throughput of 1.72Mbit/s and an information throughput of 7.16Kbit/s using an NVIDIA GeForce GTX 1080 GPU at a maximum distance of 160km with a secret key rate of 4.10×10−7 bits/pulse for a rate 0.02 multi-edge code with block length of 106 bits when ﬁnite-size effects are considered. This work extends the previous maximum CV-QKD distance of 100km to 160km, while delivering between 1.07× and 8.03× higher decoded information throughput over the upper bound on the secret key rate for a lossy channel. For distances beyond 130km, the GPU decoder delivers an information throughput between 1868× and 18790× higher than the achievable secret key rates with a 1MHz light source. The GPU-based QC-LDPC decoder achieves a 1.29× improvement in throughput over the best existing GPU decoder implementation for a rate 1/10 multi-edge LDPC code with block length of 220 bits. These results show that LDPC decoding is no longer the computational bottleneck in long-distance CV-QKD, and that the secret key rate remains limited only by the physical parameters of the quantum channel and the latency of privacy ampliﬁcation.},
+	language = {en},
+	number = {1},
+	urldate = {2023-10-06},
+	journal = {npj Quantum Inf},
+	author = {Milicevic, Mario and Feng, Chen and Zhang, Lei M. and Gulak, P. Glenn},
+	month = apr,
+	year = {2018},
+	note = {arXiv:1702.07740 [quant-ph]},
+	keywords = {Quantum Physics, Computer Science - Cryptography and Security, Computer Science - Information Theory},
+	pages = {21},
+	annote = {Comment: 23 pages, 22 figures, 4 tables, 97 references},
+	file = {Milicevic et al. - 2018 - Key Reconciliation with Low-Density Parity-Check C.pdf:/home/skesky/Zotero/storage/WZLJLQ89/Milicevic et al. - 2018 - Key Reconciliation with Low-Density Parity-Check C.pdf:application/pdf},
 }
 
-@book{CER:2002,
-	author = {E. Cerami},
-	title = {Web Services Essentials},
-	publisher = {O'Reilly},
-	Year = {2002}
-}
 
-@book{LAR:2005,
-	author = {C. Larman},
-	title = {Applicare UML e i pattern - Analisi e progettazione orientata agli oggetti - 3a Edizione},
-	publisher = {Prentice Hall},
-	Year = {2005}
-}
-
-@article{Kat:1990,
- author = {Randy H. Katz},
- title = {Toward a unified framework for version modeling in engineering databases},
- journal = {ACM Comput. Surv.},
- volume = {22},
- number = {4},
- year = {1990},
- issn = {0360-0300},
- pages = {375--409},
- doi = {http://doi.acm.org/10.1145/98163.98172},
- publisher = {ACM},
- address = {New York, NY, USA},
-}
-
-@inproceedings{AHL:1995,
- author = {Eric Andonoff and Gilles Hubert and Annig Le Parc and Gilles Zurfluh},
- title = {Modelling Inheritance, Composition and Relationship Links between Objects, Object Versions and Class Versions},
- booktitle = {CAiSe '95: Proceedings of the 7th International Conference on Advanced Information Systems Engineering},
- year = {1995},
- isbn = {3-540-59498-1},
- pages = {96--111},
- publisher = {Springer-Verlag},
- address = {London, UK},
-}
-
-@inproceedings{AHL:1996,
- author = {Eric Andonoff and Gilles Hubert and Annig Le Parc and Gilles Zurfluh},
- title = {Integrating Versions in the OMT Models},
- booktitle = {ER '96: Proceedings of the 15th International Conference on Conceptual Modeling},
- year = {1996},
- isbn = {3-540-61784-1},
- pages = {472--487},
- publisher = {Springer-Verlag},
- address = {London, UK},
-}
-
-@misc{ kolp99metaobject,
-  author = "M. Kolp",
-  title = "A Metaobject Protocol for Integrating Full-Fledged Relationships into Reflective
-    Systems",
-  text = "M. Kolp. A Metaobject Protocol for Integrating Full-Fledged Relationships
-    into Reflective Systems. PhD thesis, INFODOC, Universite Libre de Bruxelles,
-    Belgium, Oct. 1999. At http://yeroos.qant.ucl.ac.be/file.pdf/PhD-99-01.pdf.",
-  year = "1999",
-  url = "citeseer.ist.psu.edu/kolp99metaobject.html" 
-}
-
-@inproceedings{KBC:1987,
- author = {Won Kim and Jay Banerjee and Hong-Tai Chou and Jorge F. Garza and Darrel Woelk},
- title = {Composite object support in an object-oriented database system},
- booktitle = {OOPSLA '87: Conference proceedings on Object-oriented programming systems, languages and applications},
- year = {1987},
- isbn = {0-89791-247-0},
- pages = {118--125},
- location = {Orlando, Florida, United States},
- doi = {http://doi.acm.org/10.1145/38765.38818},
- publisher = {ACM},
- address = {New York, NY, USA},
-}
-
-@book{Kim:1990,
- author = {Won Kim},
- title = {Introduction to object-oriented databases},
- year = {1990},
- isbn = {0-262-11124-1},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA},
- }
-
-@article{SRH:1989,
- author = {A. V. Shah and J. H. Hamel and R. A. Borsari and J. E. Rumbaugh},
- title = {DSM: an object-relationship modeling language},
- journal = {SIGPLAN Not.},
- volume = {24},
- number = {10},
- year = {1989},
- issn = {0362-1340},
- pages = {191--202},
- doi = {http://doi.acm.org/10.1145/74878.74898},
- publisher = {ACM},
- address = {New York, NY, USA},
-}
-
-@misc{ GAD:2002,
-  author = "Y. Gueheneuc and H. Albin-Amiot and R. Douence and P. Cointe",
-  title = "Bridging the gap between modeling and programming languages",
-  text = "Y.-G. Gueheneuc, H. Albin-Amiot, R. Douence, and P. Cointe. Bridging the
-    gap between modeling and programming languages. Technical report, Ecole
-    des Mines de Nantes, May 2002. To appear.",
-  year = "2002",
-  url = "citeseer.ist.psu.edu/gueheneuc02bridging.html" }
-
-@phdthesis{Kla:1990,
-	Author = {W. Klas},
-	Title = {A metaclass system for open object-oriented data models.},
-	School = {Technical University of Vienna},
-	Year = {1990}
-}
-
-@techreport{Kla:1995,
-	Author = {W. Klas},
-	Title = {VODAK V4.0 User Manual},
-	School = {Arbeitspapiere der GMD},
-	Year = {1995}
-}
-
-@phdthesis{Bos:1995,
-	Author = {J. Bosch},
-	Title = {Layered Object Model: investigating paradigm extensibility.},
-	School = {University of Karlskarona, Ronneby, Sweden},
-	Year = {1995}
-}
-
-@article{ bosch94relations,
-    author = "Jan Bosch",
-    title = "{Relations as Object Model Components}",
-    journal = "Journal of Programming Languages",
-    volume = "4",
-    pages = "39--61",
-    year = "1994",
-    url = "citeseer.ist.psu.edu/281141.html" }
-
-
-@article{IBC:1991,
-	Author = {M.H. Ibrahim and W.E. Bejeck and F.A. Cummins},
-	Title = {Instance specialization without delegation},
-	Journal = {Journal of object oriented programming},
-	Year = {1991}
-}
-
-@article{IC:1988,
-	Author = {M.H. Ibrahim and F.A. Cummins},
-	Title = {KSL: A reflective object oriented programming language},
-	Journal = {Proceedings of the IEEE international conference on computer languages},
-	Year = {1988}
-}
-
-@article{Rum:1987,
- author = {James Rumbaugh},
- title = {Relations as semantic constructs in an object-oriented language},
- journal = {SIGPLAN Not.},
- volume = {22},
- number = {12},
- year = {1987},
- issn = {0362-1340},
- pages = {466--481},
- doi = {http://doi.acm.org/10.1145/38807.38850},
- publisher = {ACM},
- address = {New York, NY, USA},
-}
-
-@techreport{edmond93representing,
-    author = "David Edmond and Mike P. Papazoglou and Mark McLoughlin",
-    title = "Representing Relationships and Their Semantic Partiions as First-class Objects",
-    number = "FIT-TR-1993-01",
-    month = "6,",
-    year = "1993",
-    url = "citeseer.ist.psu.edu/131544.html" 
-}
-
-@inproceedings{kristensen96objectoriented,
-    author = "Bent Bruun Kristensen",
-    title = "Object-Oriented Modeling with Roles",
-    booktitle = "Proceedings of the 2nd International Conference on Object-Oriented Information Systems",
-    publisher = "Springer-Verlag",
-    editor = "John Murphy and Brian Stone",
-    pages = "57--71",
-    year = "1996",
-    url = "citeseer.ist.psu.edu/kristensen95objectoriented.html" 
-}
-
-@misc{kristensen-associative,
-  author = "Bent Bruun Kristensen",
-  title = "Associative Modeling and Programming",
-  url = "citeseer.ist.psu.edu/618810.html"
-}
-
-@misc{ jamil92orlog,
-  author = "M. Jamil and L. Lakshmanan",
-  title = "ORLOG: A Logic for Semantic Object-Oriented Models",
-  text = "M.H. Jamil, L.V.S. Lakshmanan, ORLOG: A Logic for Semantic Object-Oriented
-    Models, Proc. of the First Intern. Conference on Information and Knowledge
-    Management, pp. 584592, (1992).",
-  year = "1992",
-  url = "citeseer.ist.psu.edu/jamil92orlog.html" }
-
-@misc{bush1945,
-  author = "Vannevar Bush",
-  title = "As We May Think",
-  url = "http://www.theatlantic.com/doc/194507/bush",
-  publisher = "The Atlantic Monthly",
-  year = "1945"
-}
